--- a/front.html
+++ b/front.html
@@ -44,8 +44,19 @@
         <h2>Services du Parc</h2>
         <ul>
             <li>Boutique</li>
-            <li>Snack</li>
+            <li>Cafe Nomad</li>
+            <li>Petit Cafe</li>
             <li>Aires de Pique-Nique</li>
+            <li>Toilettes</li>
+            <li>Point d'eau </li>
+            <li>Gare</li>
+            <li>Trajet Train </li>
+            <li>Lodge </li>
+            <li>Tente pedagogique</li>
+            <li>Paillote</li>
+            <li>Platteau des Jeux<li>
+            <li>Espace Pique-nique</li>
+            <li>Point de vu</li>
 
         </ul>
     </section>
