--- a/front.html
+++ b/front.html
@@ -54,7 +54,7 @@
             <li>Lodge </li>
             <li>Tente pedagogique</li>
             <li>Paillote</li>
-            <li>Platteau des Jeux<li>
+            <li>Platteau des Jeux</li>
             <li>Espace Pique-nique</li>
             <li>Point de vu</li>
 
