--- a/new/index.html
+++ b/new/index.html
@@ -9,8 +9,10 @@
 <body>
     <header>
         <nav>
-            <h1>Parc Animalier</h1>
-            <ul>
+            <div class="logo">
+                <h1>Parc Animalier</h1>
+            </div>
+            <ul class="nav-links">
                 <li><a href="#discover">Découvrir le Parc</a></li>
                 <li><a href="#animals">Nos Animaux</a></li>
                 <li><a href="#services">Services</a></li>
@@ -21,28 +23,28 @@
 
     <main>
         <!-- Section Découvrir le Parc -->
-        <section id="discover">
-            <div class="section-content">
-                <h2>Découvrir le Parc</h2>
-                <p>Bienvenue dans notre parc animalier, un endroit où vous pouvez explorer la biodiversité, en apprendre davantage sur nos magnifiques animaux et passer une journée inoubliable en famille.</p>
+        <section id="discover" class="hero-section">
+            <div class="hero-content">
+                <h2>Explorez le Monde Animal</h2>
+                <p>Plongez dans un univers fascinant où cohabitent de magnifiques espèces d'animaux, le tout dans un environnement naturel et respectueux.</p>
                 <a href="parc.html" class="btn">En savoir plus</a>
             </div>
         </section>
 
         <!-- Section Nos Animaux -->
-        <section id="animals">
+        <section id="animals" class="section">
             <div class="section-content">
                 <h2>Nos Animaux</h2>
-                <p>Découvrez la variété d'espèces que nous accueillons, du majestueux lion à l'adorable panda roux, dans des habitats recréés pour leur bien-être.</p>
+                <p>Découvrez les nombreuses espèces qui peuplent notre parc, du lion majestueux au panda roux espiègle. Chaque animal bénéficie d’un habitat adapté à ses besoins.</p>
                 <a href="animaux.html" class="btn">Voir les Animaux</a>
             </div>
         </section>
 
         <!-- Section Services -->
-        <section id="services">
+        <section id="services" class="section">
             <div class="section-content">
                 <h2>Services du Parc</h2>
-                <p>Profitez de nos services pour rendre votre visite agréable : boutique de souvenirs, restaurants, espaces de pique-nique et plus encore.</p>
+                <p>Pour une visite agréable et confortable, profitez de nos services : boutiques de souvenirs, restaurants, aires de pique-nique, et bien plus encore.</p>
                 <a href="services.html" class="btn">Explorer les Services</a>
             </div>
         </section>
