--- a/new/index.html
+++ b/new/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Parc Animalier</h1>
+                <h1>Parc Animalier de l'ISEN</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="#discover">Découvrir le Parc</a></li>
