--- a/new/index.html
+++ b/new/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parc Animalier</title>
+    <title>Parc Animalier de l'ISEN</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <!-- Section Découvrir le Parc -->
+        <!-- Section Découvrir le Parc avec image de fond -->
         <section id="discover" class="hero-section">
             <div class="hero-content">
                 <h2>Explorez le Monde Animal</h2>
@@ -59,7 +59,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Parc Animalier. Tous droits réservés.</p>
+        <p>&copy; 2024 Parc Animalier de l'ISEN. Tous droits réservés.</p>
     </footer>
 
     <script src="scripts.js"></script>
