--- a/Front-end/Accueil.html
+++ b/Front-end/Accueil.html
@@ -20,14 +20,15 @@
             <!-- Navigation principale -->
             <ul class="nav-links">
                 <li><a href="decouvrir.html">Découvrir le Parc</a></li>
-                <li><a href="gestion-biomes.html">Nos Animaux</a></li>
+                <li><a href="gestion-biomes.html">Les biomes</a></li>
+                <li><a href="animaux.html">Animaux</a></li>
                 <li><a href="services.html">Nos Services</a></li>
-                <li><a href="connexion.html">Inscription</a></li>
+                <li><a href="billeterie.html">Billeterie</a></li>
             </ul>
     
             <!-- Bouton Billeterie -->
-            <a href="billeterie.html" class="billeterie">
-                <img src="Public/empreinte-de-patte.png" alt="Bonhomme" class="icon"> Billeterie
+            <a href="Connexion.html" class="Inscription">
+                <img src="Public/empreinte-de-patte.png" alt="PatteChat" class="icon"> Inscription
             </a>
         </nav>
     </header>
