--- a/Front-end/gestion-biomes.html
+++ b/Front-end/gestion-biomes.html
@@ -3,36 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parc Animalier de l'ISEN</title>
+    <title>Gestion des Biomes - Parc Animalier de l'ISEN</title>
     <link rel="stylesheet" href="gestion-biomes.css"> 
 </head>
 <body>
+    <!-- Header fixe -->
     <header>
-        <nav>
+        <nav class="header-container">
+            <!-- Logo -->
             <div class="logo">
-                <a href="Accueil.html" style="text-decoration: none;">
-                    <h1>Parc Animalier de l'ISEN</h1>
+                <a href="Accueil.html">
+                    <img src="Public/logo-site.png" alt="Logo Parc Animalier de l'ISEN">
                 </a>
             </div>
+    
+            <!-- Navigation principale -->
             <ul class="nav-links">
                 <li><a href="decouvrir.html">Découvrir le Parc</a></li>
-                <li><a href="#animals">Nos Animaux</a></li>
+                <li><a href="gestion-biomes.html">Les biomes</a></li>
+                <li><a href="animaux.html">Animaux</a></li>
                 <li><a href="services.html">Nos Services</a></li>
-                <li><a href="connexion.html">Inscription</a></li>
+                <li><a href="billeterie.html">Billeterie</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <h2>Les différents biomes</h2>
-        <div class="biomes-container">
-            <a href="Le-belvedere.html" class="biome-card" style="background-color: #6c5d3d;">Le Belvédère</a>
-            <a href="Les-clairières.html" class="biome-card" style="background-color: #d6d68a;">Les Clairières</a>
-            <a href="Le-plateau.html" class="biome-card" style="background-color: #e85e50;">Le Plateau</a>
-            <a href="La-vallon-des-cascades.html" class="biome-card" style="background-color: #679db6;">Le Vallon des Cascades</a>
-            <a href="Le-bois-des-pins.html" class="biome-card" style="background-color: #82b585;">Le Bois des Pins</a>
-            <a href="la-bergerie-des-reptiles.html" class="biome-card" style="background-color: #acc8b0;">La Bergerie des Reptiles</a>
+    <!-- Section Bannière -->
+    <section class="hero-section">
+        <div class="hero-image">
+            <div class="hero-text">
+                <p>CINQ BIOMES A EXPLORER</p>
+            </div>
         </div>
-    </main>
+    </section>
+
+    <!-- Section des Biomes -->
+    <main>
+        <div class="biomes-container">
+            <div class="biome-card">
+                <img src="Public/belvedere.jpg" alt="Le Belvédère">
+                <h3>Le Belvédère</h3>
+                <p>Découvrez un point de vue spectaculaire sur les écosystèmes environnants et la vie animale.</p>
+            </div>
+            <div class="biome-card">
+                <img src="Public/clairiere.png" alt="Les Clairières">
+                <h3>Les Clairières</h3>
+                <p>Les clairières vous offrent un aperçu des écosystèmes ouverts avec une flore et faune diversifiées.</p>
+            </div>
+            <div class="biome-card">
+                <img src="Public/plateau.png" alt="Le Plateau">
+                <h3>Le Plateau</h3>
+                <p>Un habitat sec et rocheux où évoluent des espèces adaptées aux conditions extrêmes.</p>
+            </div>
+            <div class="biome-card">
+                <img src="Public/vallon-cascade.png" alt="Le Vallon des Cascades">
+                <h3>Le Vallon des Cascades</h3>
+                <p>Explorez un univers aquatique où la faune aquatique et terrestre se rencontre.</p>
+            </div>
+            <div class="biome-card">
+                <img src="Public/bois-des-pins.jpg" alt="Le Bois des Pins">
+                <h3>Le Bois des Pins</h3>
+                <p>Promenez-vous dans une forêt dense abritant de nombreuses espèces d’oiseaux et mammifères.</p>
+            </div>
+            <div class="biome-card">
+                <img src="Public/bergerie-reptile.jpg" alt="La Bergerie des Reptiles">
+                <h3>La Bergerie des Reptiles</h3>
+                <p>Un habitat chaud et humide où vous pourrez observer des reptiles fascinants.</p>
+            </div>
+        </div>
+    </main>    
 </body>
 </html>
