--- a/Front-end/gestion-biomes.html
+++ b/Front-end/gestion-biomes.html
@@ -7,17 +7,14 @@
     <link rel="stylesheet" href="gestion-biomes.css"> 
 </head>
 <body>
-    <!-- Header fixe -->
     <header>
         <nav class="header-container">
-            <!-- Logo -->
             <div class="logo">
                 <a href="Accueil.html">
                     <img src="Public/logo-site.png" alt="Logo Parc Animalier de l'ISEN">
                 </a>
             </div>
     
-            <!-- Navigation principale -->
             <ul class="nav-links">
                 <li><a href="decouvrir.html">Découvrir le Parc</a></li>
                 <li><a href="gestion-biomes.html">Les biomes</a></li>
@@ -28,7 +25,6 @@
         </nav>
     </header>
 
-    <!-- Section Bannière -->
     <section class="hero-section">
         <div class="hero-image">
             <div class="hero-text">
@@ -37,39 +33,50 @@
         </div>
     </section>
 
-    <!-- Section des Biomes -->
     <main>
         <div class="biomes-container">
-            <div class="biome-card">
-                <img src="Public/belvedere.jpg" alt="Le Belvédère">
-                <h3>Le Belvédère</h3>
-                <p>Découvrez un point de vue spectaculaire sur les écosystèmes environnants et la vie animale.</p>
-            </div>
-            <div class="biome-card">
-                <img src="Public/clairiere.png" alt="Les Clairières">
-                <h3>Les Clairières</h3>
-                <p>Les clairières vous offrent un aperçu des écosystèmes ouverts avec une flore et faune diversifiées.</p>
-            </div>
-            <div class="biome-card">
-                <img src="Public/plateau.png" alt="Le Plateau">
-                <h3>Le Plateau</h3>
-                <p>Un habitat sec et rocheux où évoluent des espèces adaptées aux conditions extrêmes.</p>
-            </div>
-            <div class="biome-card">
-                <img src="Public/vallon-cascade.png" alt="Le Vallon des Cascades">
-                <h3>Le Vallon des Cascades</h3>
-                <p>Explorez un univers aquatique où la faune aquatique et terrestre se rencontre.</p>
-            </div>
-            <div class="biome-card">
-                <img src="Public/bois-des-pins.jpg" alt="Le Bois des Pins">
-                <h3>Le Bois des Pins</h3>
-                <p>Promenez-vous dans une forêt dense abritant de nombreuses espèces d’oiseaux et mammifères.</p>
-            </div>
-            <div class="biome-card">
-                <img src="Public/bergerie-reptile.jpg" alt="La Bergerie des Reptiles">
-                <h3>La Bergerie des Reptiles</h3>
-                <p>Un habitat chaud et humide où vous pourrez observer des reptiles fascinants.</p>
-            </div>
+            <a href="Le-belvedere.html" class="biome-card-link">
+                <div class="biome-card">
+                    <img src="Public/belvedere.jpg" alt="Le Belvédère">
+                    <h3>Le Belvédère</h3>
+                    <p>Découvrez un point de vue spectaculaire sur les écosystèmes environnants et la vie animale.</p>
+                </div>
+            </a>
+            <a href="Les-clairieres.html" class="biome-card-link">
+                <div class="biome-card">
+                    <img src="Public/clairiere.png" alt="Les Clairières">
+                    <h3>Les Clairières</h3>
+                    <p>Les clairières vous offrent un aperçu des écosystèmes ouverts avec une flore et faune diversifiées.</p>
+                </div>
+            </a>
+            <a href="Le-plateau.html" class="biome-card-link">
+                <div class="biome-card">
+                    <img src="Public/plateau.png" alt="Le Plateau">
+                    <h3>Le Plateau</h3>
+                    <p>Un habitat sec et rocheux où évoluent des espèces adaptées aux conditions extrêmes.</p>
+                </div>
+            </a>
+            <a href="Le-vallon-des-cascades.html" class="biome-card-link">
+                <div class="biome-card">
+                    <img src="Public/vallon-cascade.png" alt="Le Vallon des Cascades">
+                    <h3>Le Vallon des Cascades</h3>
+                    <p>Explorez un univers aquatique où la faune aquatique et terrestre se rencontre.</p>
+                </div>
+            </a>
+            <a href="Le-bois-des-pins.html" class="biome-card-link">
+                <div class="biome-card">
+                    <img src="Public/bois-des-pins.jpg" alt="Le Bois des Pins">
+                    <h3>Le Bois des Pins</h3>
+                    <p>Promenez-vous dans une forêt dense abritant de nombreuses espèces d’oiseaux et mammifères.</p>
+                </div>
+            </a>
+            <a href="La-bergerie-des-reptiles.html" class="biome-card-link">
+                <div class="biome-card">
+                    <img src="Public/bergerie-reptile.jpg" alt="La Bergerie des Reptiles">
+                    <h3>La Bergerie des Reptiles</h3>
+                    <p>Un habitat chaud et humide où vous pourrez observer des reptiles fascinants.</p>
+                </div>
+            </a>
         </div>
     </main>    
 </body>
