--- a/Front-end/plateau-enclosB.html
+++ b/Front-end/plateau-enclosB.html
@@ -32,7 +32,7 @@
     <main class="hippopotame-container">
         <!-- Section Image principale -->
         <section class="hippopotame-hero">
-            <img src="Public/hippopotame.png" alt="Hippopotame">
+            <img src="Public/Hippopotame.jpg" alt="Hippopotame">
         </section>
 
         <!-- Section Informations -->
