--- a/Front-end/Le-plateau.html
+++ b/Front-end/Le-plateau.html
@@ -44,11 +44,11 @@
                 </div>
             </a>
 
-            <a href="plateau-enclosB.html" class="enclos-link">
+           <a href="plateau-enclosB.html" class="enclos-link">
                 <div class="enclos">
-                    <img src="Public/enclos-plateau.jpg" alt="Enclos B">
+                    <img src="Public/Hippopotame.jpg" alt="Enclos B">
                     <h3>Enclos B</h3>
-                    <p>In process</p>
+                    <p> Découvrez le roi des rivières</p>
                 </div>
             </a>
 
