--- a/Front-end/plateau-enclosB.html
+++ b/Front-end/plateau-enclosB.html
@@ -59,7 +59,7 @@
             </div>
 
             <p class="description">
-                L'hippopotame est un animal semi-aquatique qui passe une grande partie de sa journée dans l'eau pour se rafraîchir et protéger sa peau des coups de soleil. Bien qu'il soit herbivore, il est connu pour sa rapidité et sa puissance, particulièrement lorsqu'il se sent menacé. Les hippopotames vivent en groupes appelés "troupes", généralement composés de plusieurs femelles et leurs petits, dirigés par un mâle dominantPlongez dans l'univers fascinant de l'hippopotame, cette créature imposante et mystérieuse qui, bien qu'évoluant dans les eaux paisibles, est loin d'être un simple géant doux. Découvrez le roi des rivières, maître des batailles aquatiques et acteur d'un écosystème fragile, où sa force et son caractère surprenant ne cessent d'étonner.".
+                L'hippopotame est un animal semi-aquatique qui passe une grande partie de sa journée dans l'eau pour se rafraîchir et protéger sa peau des coups de soleil. Bien qu'il soit herbivore, il est connu pour sa rapidité et sa puissance, particulièrement lorsqu'il se sent menacé. Les hippopotames vivent en groupes appelés "troupes", généralement composés de plusieurs femelles et leurs petits, dirigés par un mâle dominant. Cette créature imposante et mystérieuse qui, bien qu'évoluant dans les eaux paisibles, est loin d'être un simple géant doux. Découvrez le roi des rivières, maître des batailles aquatiques et acteur d'un écosystème fragile, où sa force et son caractère surprenant ne cessent d'étonner.".
             </p>
         </section>
     </main>
